--- a/assets/style.css
+++ b/assets/style.css
@@ -8,17 +8,17 @@ body {
     background: transparent;
     border: none;
     resize: none;
-    color: #000000;
-    border-left: 1px solid black;
+    color: #0A1D3E;
+    border-left: 1px solid #0A1D3E;
     padding: 10px;
   }
   
   .jumbotron {
     text-align: center;
     background-color: transparent;
-    color: black;
+    color: #0A1D3E;
     border-radius: 0;
-    border-bottom: 10px solid black;
+    border-bottom: 10px solid #0A1D3E;
   }
   
   .description {
@@ -38,22 +38,22 @@ body {
   
   .hour {
     background-color: #ffffff;
-    color: #000000;
-    border-top: 1px dashed #000000;
+    color: #0A1D3E;
+    border-top: 1px dashed #0A1D3E;
   }
   
   .past {
-    background-color: #d3d3d3;
+    background-color: #F8CE46;
     color: white;
   }
   
   .present {
-    background-color: #ff6961;
+    background-color: #C42939;
     color: white;
   }
   
   .future {
-    background-color: #77dd77;
+    background-color: #EE8833;
     color: white;
   }
   
@@ -61,7 +61,7 @@ body {
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    background-color: #06aed5;
+    background-color: #0A1D3E;
     color: white;
   }
   
