removed possible notification feature may add in future and changed hover button color

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,11 +24,6 @@ body {
   .description {
     white-space: pre-wrap;
   }
-
-  .show {
-    color:#0A1D3E;
-    font-size: 14px;
-  }
   
   .time-block {
     text-align: center;
@@ -72,5 +67,6 @@ body {
   
   .saveBtn i:hover {
     font-size: 20px;
-    transition: all 0.3s ease-in-out;
+    color:#F8CE46
+    /* transition: all 0.3s ease-in-out; */
   }
